<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <EditText
            android:id="@+id/et_firstname"
            android:layout_width="386dp"
            android:layout_height="67dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="53dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="392dp"
            android:ems="10"
            android:hint="@string/fname"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_selectAvatar"
            app:layout_constraintVertical_bias="0.218" />

        <EditText
            android:id="@+id/et_lastname"
            android:layout_width="386dp"
            android:layout_height="67dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="53dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="357dp"
            android:ems="10"
            android:hint="@string/lname"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_firstname"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/et_studentid"
            android:layout_width="386dp"
            android:layout_height="67dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="174dp"
            android:layout_marginBottom="268dp"
            android:ems="10"
            android:hint="@string/sid"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.086"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_lastname"
            app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/iv_selectAvatar"
        android:layout_width="188dp"
        android:layout_height="136dp"
        android:layout_marginStart="111dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="576dp"
        android:ems="10"
        android:src="@drawable/select_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_depstatic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="313dp"
        android:layout_marginBottom="222dp"
        android:text="@string/depart"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_studentid"
        app:layout_constraintVertical_bias="0.25" />

    <RadioGroup
        android:id="@+id/rg_selectstream"
        android:layout_width="392dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="102dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_depstatic">

        <RadioButton
            android:id="@+id/rb_cs"
            android:layout_width="94dp"
            android:layout_height="match_parent"
            android:text="@string/cs" />

        <RadioButton
            android:id="@+id/rb_bio"
            android:layout_width="94dp"
            android:layout_height="match_parent"
            android:text="@string/bio" />

        <RadioButton
            android:id="@+id/rb_sis"
            android:layout_width="106dp"
            android:layout_height="match_parent"
            android:text="@string/sis" />

        <RadioButton
            android:id="@+id/rb_other"
            android:layout_width="109dp"
            android:layout_height="match_parent"
            android:text="@string/oth" />
    </RadioGroup>

        <Button
            android:id="@+id/bt_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="158dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="165dp"
            android:layout_marginBottom="38dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_selectstream" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>